--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
   },
   "dependencies": {
     "@types/socket.io": "^3.0.1",
-    "bcryptjs": "^3.0.2",
+    "bcrypt": "^6.0.0",
     "cloudinary": "^1.41.0",
     "cors": "^2.8.5",
     "debug": "^4.4.3",
